--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "Android attestation API",
     "Attestation Verification",
-    "Apple Device Check", 
+    "Apple Device Check",
     "SafetyNet API"
   ],
   "author": {
@@ -41,8 +41,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
+    "@types/node-forge": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.1.2",
@@ -62,6 +64,8 @@
     }
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "node-forge": "^1.3.1",
     "sitka": "^1.0.5"
   }
 }
