--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     }
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-forge": "^1.3.1",
     "sitka": "^1.0.5"
