--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,33 @@
 {
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": true,
-    "preserveConstEnums": true,
-    "resolveJsonModule": true,
-    "target": "es6",
-    "module": "commonjs",
+    // Language and Environment
+    "target": "es5",
     "lib": ["es5", "es6"],
-    "declaration": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "rootDir": "src",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+
+    // Strict Type-Checking Options
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noImplicitReturns": true,
-    "moduleResolution": "node",
+
+    // Module Resolution
+    "resolveJsonModule": true,
     "typeRoots": ["node_modules/@types", "types"],
-    "esModuleInterop": true
+
+    // Emit
+    "declaration": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "rootDir": "src",
+
+    // Additional Checks
+    "forceConsistentCasingInFileNames": true,
+    "preserveConstEnums": true
   },
   "exclude": ["node_modules", "test", "types"]
 }
