--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "attestation-server-js",
+  "name": "safetynet-server-js",
   "version": "0.0.0",
-  "description": "A simple and complete package for device integrity check",
+  "description": "Cryptographically-signed attestation verification using Google's SafetyNet API, confirming various security properties of the device",
   "keywords": [
     "Android attestation API",
     "Attestation Verification",
-    "Apple Device Check",
     "SafetyNet API"
   ],
   "author": {
@@ -15,7 +14,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yogesh-chaudhari-77/attestation-server-js.git"
+    "url": "https://github.com/yogeshwar-chaudhari-20/safetynet-server-js"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,14 +29,11 @@
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "clean": "(rm -r ./.nyc_output || true) && (rm -r ./coverage || true) && (rm -r ./dist || true)",
     "clean:all": "npm run clean && (rm -r ./node_modules || true)",
-    "cover": "nyc npm run test",
-    "cover:check": "nyc --check-coverage npm run test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "eslint --ext .ts --fix src/**/*.ts test/**/*.ts",
-    "preversion": "npm run build && npm run cover:check",
+    "lint": "eslint --ext .ts --fix src/**/*.ts",
+    "preversion": "npm run build",
     "postversion": "git push && git push --tags",
     "prepare": "npm run build",
-    "test": "mocha",
     "upgrade": "npx npm-check -u",
     "version": "npm run build && npm run changelog:update"
   },
